Add MCP server for Alfa accessibility testing
- Add mcp-server workspace with MCP protocol implementation
- Implement 5 tools: audit_html, audit_page, filter_outcomes, get_rule_info, list_rules
- Add comprehensive documentation (7 docs files)
- Integrate with Claude Desktop via MCP
- Support for 91 WCAG accessibility rules
- Add workspace configuration for mcp-server
- Include testing guides and setup instructions

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "mcp-server"
   ],
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
