Add MCP server with HTTP API and comprehensive documentation
- Add MCP server implementation with HTTP REST API
- Implement 5 accessibility testing tools (audit_html, audit_page, filter_outcomes, get_rule_info, list_rules)
- Add API key authentication
- Create comprehensive documentation:
  - MCP_GUIDE.md: Complete guide for external agents with API spec
  - DEPLOYMENT.md: Full deployment guide (local, AWS, ngrok)
  - AUTHENTICATION.md: Authentication methods guide
  - NGROK_SETUP.md: Ngrok setup instructions
  - INTERNET_ACCESS.md: Internet access guide
  - DEPLOYMENT_STATUS.md: Current deployment status
- Add HTTP server with Express.js
- Support for external integrations via REST API
- Include code examples in Python, JavaScript, Go, and cURL

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -6,7 +6,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start:http": "node dist/http-server.js",
+    "dev:http": "tsc --watch & node dist/http-server.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
@@ -15,9 +17,13 @@
     "@siteimprove/alfa-earl": "workspace:^",
     "@siteimprove/alfa-json": "workspace:^",
     "@siteimprove/alfa-rules": "workspace:^",
-    "@siteimprove/alfa-web": "workspace:^"
+    "@siteimprove/alfa-web": "workspace:^",
+    "cors": "^2.8.5",
+    "express": "^5.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3"
   }
