Fix HTML parsing in MCP server - resolve all rules returning inapplicable
- Add jsdom dependency for HTML parsing in Node.js
- Fix audit_html endpoint to properly parse HTML using jsdom and Native.fromNode
- Set globalThis.document before calling Native.fromNode to fix createRange error
- Update TypeScript moduleResolution to 'bundler' for proper native module imports
- Fix Response.of() parameter order
- Both http-server.ts and index.ts now correctly parse HTML and return proper audit results

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -18,8 +18,10 @@
     "@siteimprove/alfa-json": "workspace:^",
     "@siteimprove/alfa-rules": "workspace:^",
     "@siteimprove/alfa-web": "workspace:^",
+    "@types/jsdom": "^27.0.0",
     "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "jsdom": "^27.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
