--- a/mcp-server/tsconfig.json
+++ b/mcp-server/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src",
     "module": "ES2022",
     "target": "ES2022",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
