--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -21,12 +21,14 @@
     "@types/jsdom": "^27.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "jsdom": "^27.3.0"
+    "jsdom": "^27.3.0",
+    "linkedom": "^0.18.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
+    "esbuild": "^0.27.2",
     "typescript": "^5.9.3"
   }
 }
